<resources>
    <string name="app_name">Revise Right</string>
    <string name="select_a_question_tag">Select a Question Tag</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="using_custom_question_count">Using custom question count</string>
    <string name="launch">Launch</string>
    <string name="dynamic_question_count">Using dynamic question count</string>
    <string name="select_topics">Select Topics</string>
    <string name="no_topics_selected">No topics selected</string>
    <string name="no_more_questions">No More Questions</string>
    <string name="show_support">Show Support?</string>
    <string name="main_menu">Main Menu</string>
    <string name="accuracy">Accuracy</string>
    <string name="swipe_right_or_left">Swipe right if you are correct, otherwise swipe left.</string>
    <string name="swipe_left_or_right">Swipe left if you are correct, otherwise swipe right.</string>
    <string name="computer_science_edition">Computer Science Edition</string>
    <string name="leave_review">Leave Review</string>
    <string name="donate">Donate</string>
    <string name="right">Right</string>
</resources>
