<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Splash">

    <TextView
            android:text="@string/app_name"
            android:layout_width="331dp"
            android:layout_height="62dp"
            android:id="@+id/textView4" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false" android:textStyle="bold"
            android:textAlignment="center" android:textColor="@color/colorAccent" android:textSize="48sp"
            android:layout_marginStart="16dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"/>
    <TextView
            android:text="@string/computer_science_edition"
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false"
            android:textAlignment="center" android:textColor="@color/colorAccent" android:textSize="24sp"
            android:layout_marginStart="16dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <Button
            android:text="@string/launch"
            android:layout_width="327dp"
            android:enabled="false"
            android:layout_height="48dp"
            android:id="@+id/launchButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:background="@color/colorAccent" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/questionCount"
            app:layout_constraintHorizontal_bias="0.489"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customQuestionSwitch" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:checked="false"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/listTopics"/>
    <TextView
            android:text="@string/dynamic_question_count"
            android:enabled="false"
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:id="@+id/questionCountStatus" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/customQuestionSwitch"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.596"
            android:textColor="@color/colorAccent" android:textSize="18sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/listTopics"/>
    <NumberPicker
            android:divider="@color/colorAccent"
            android:layout_width="83dp"
            android:layout_height="130dp"
            android:visibility="invisible"
            android:theme="@style/NumberPickerTheme"
            android:id="@+id/questionCount" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/questionCountStatus"
    />
    <TextView
            android:text="@string/no_topics_selected"
            android:layout_width="346dp"
            android:layout_height="111dp"
            android:id="@+id/topicDisplay" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.489" android:textSize="14sp"
            android:textColor="@color/colorAccent" android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/select_topics"
            android:layout_width="317dp"
            android:textColor="@color/colorPrimary" android:background="@color/colorAccent" android:textSize="18sp"
            android:layout_height="48dp"
            android:id="@+id/listTopics" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.487"
            android:enabled="true"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/topicDisplay"/>
</android.support.constraint.ConstraintLayout>