<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".DoneActivity">

    <TextView
            android:text="@string/no_more_questions"
            android:layout_width="337dp"
            android:layout_height="50dp"
            android:id="@+id/textView2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAllCaps="true" android:textStyle="bold" android:textAlignment="center"
            android:textColor="@color/colorAccent" android:textSize="32sp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/show_support"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:layout_width="278dp"
            android:layout_height="50dp"
            android:id="@+id/showSupportButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textAllCaps="true"
            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.504" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginTop="28dp"/>
    <Button
            android:text="@string/main_menu"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:layout_width="278dp"
            android:layout_height="50dp"
            android:id="@+id/mainMenuButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textAllCaps="true"
            android:textAlignment="center" android:textSize="18sp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/showSupportButton" app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.062"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/scoreDisplay"
            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/accuracy"
            android:layout_width="152dp"
            android:layout_height="28dp"
            android:id="@+id/textView3" android:textColor="@color/colorAccent"
            android:textAllCaps="false" android:textAlignment="center" android:textSize="20sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="314dp"
            android:layout_height="144dp"
            android:id="@+id/scoreDisplay" android:textColor="@color/colorAccent"
            android:textAllCaps="true" android:textAlignment="center" android:textSize="100sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:textStyle="bold" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
</android.support.constraint.ConstraintLayout>